add more api endpoints
